fix: user books added issue fix